Add dynamic rule activation & introduce RulePipeline orchestration engine
- Added YAML-based rule activation via `fraud.enabled-rules`
- Introduced `RulePipeline` to orchestrate rule execution in a configurable sequence
- Implemented `RuleContext` for extensible, context-aware rule evaluation
- Refactored `RuleEvaluationService` to delegate evaluation to the pipeline
- Updated Spring configuration to wire the pipeline and rule properties
- Ensured all rules remain backward-compatible with new context-aware interface
- Added structured and human-friendly logging across the rule execution flow